fix: align code css to match UI and mobile screen

--- a/src/components/shared/navbar/Navbar.module.scss
+++ b/src/components/shared/navbar/Navbar.module.scss
@@ -11,7 +11,7 @@
 }
 
 .img{
-  @apply h-[55px] w-[55px] lg:h-[70px] lg:w-[70px];
+  @apply h-[55px] w-[55px] md:h-[70px] md:w-[70px];
 }
 
 .theme {
